Fix wrapper padding on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,7 +47,6 @@ body{
 
 .wrapper {
 	margin: 0 auto;
-	padding: 0 1em;
 }
 
 header{
@@ -56,7 +55,7 @@ header{
 }
 
 main{
-	padding-top:80px;
+	padding: 80px 1em;
 }
 
 h1{
@@ -65,9 +64,11 @@ h1{
 }
 
 @media only screen and (min-width:960px){
+	main{
+		padding: 80px 0;
+	}
 	.wrapper{
 		max-width: 1230px;
-		padding: 0;
 	}
 	h1{
 			font-size: 5rem;
